<resources>
    <string name="app_name">UrbanVoice</string>
    <string name="welcome_part1">Вітаємо в</string>
    <string name="Urban">Urban</string>
    <string name="Voice">Voice</string>
    <string name="slogan">історії, що звучать\nдорогою міста</string>
    <string name="start_journey">Почни свою подорож</string>
    <string name="how_app_works">Як працює застосунок</string>
    <string name="language_choice">Мова:</string>
    <string name="music_genre_choice">Вибір жанру музики</string>
    <string name="genre_melody">Мелодія</string>
    <string name="genre_classical">Класична музика</string>
    <string name="genre_none">Без музики</string>
    <string name="route_finished">Маршрут завершено</string>
    <string name="route_loading_error">Помилка завантаження маршруту</string>
    <string name="next_station_placeholder">Очікування GPS...</string>
    <string name="contacts_title">Контакти:</string>
    <string name="my_routes">Мої маршрути</string>
    <string name="my_exit">Вийти</string>
    <string name="back">З поверненням</string>
    <string name="enter_email">Введіть електронну адресу</string>
    <string name="enter_password">Введіть пароль</string>
    <string name="create_new">Створи новий акаунт</string>
    <string name="enter_name">Введіть ім’я</string>
    <string name="confirm_password">Підтвердіть пароль</string>
    <string name="agree">Я погоджуюсь з Terms and Privacy Policy</string>
    <string name="tram">Трамвай №1</string>
    <string name="bus">Автобус №111</string>
    <string name="signup">Зареєструватися</string>
    <string name="login">Увійти</string>
    <string name="developer_contacts">osipolesia13@gmail.com\n
    vladonkapol@gmail.com\n
    ivanandryeyev@gmail.com\n
    nadin110820@gmail.com\n
    miroslava.holomoza@gmail.com</string>
</resources>